--- a/index.html
+++ b/index.html
@@ -3,8 +3,16 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <title>Documento sin t&iacute;tulo</title>
+
+<link href="css/estilos.css" rel="stylesheet" type="text/css" />
+
 </head>
 
+
+
 <body>
+
+
+
 </body>
 </html>
