--- a/index.html
+++ b/index.html
@@ -7,12 +7,9 @@
 <link href="css/estilos.css" rel="stylesheet" type="text/css" />
 
 </head>
-
-
-
 <body>
 
 <h1> Proyecto Empresarial </h1>
-
+  <p> Párrafo agredado desde git </p>
 </body>
 </html>
