--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <body>
 
 <h1> Proyecto Empresarial </h1>
-  <p> Párrafo agredado desde git </p>
+  <p> P&aacute;rrafo agredado desde git </p>
 </body>
 </html>
